--- a/mean 2/cliente/src/app/components/crear-producto/crear-producto.component.html
+++ b/mean 2/cliente/src/app/components/crear-producto/crear-producto.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body text-center">
                     <span class="titulo">
-                        Crear producto
+                        {{titulo | uppercase}}
                     </span>
                     <form class="mt-3" [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
                         <div class="mb-3">
