--- a/mean 2/cliente/src/app/components/listar-productos/listar-productos.component.html
+++ b/mean 2/cliente/src/app/components/listar-productos/listar-productos.component.html
@@ -25,10 +25,10 @@
                                 <td>{{ producto['nombre'] }} </td>
                                 <td>{{ producto['categoria'] }}</td>
                                 <td>{{ producto['ubicacion']}}</td>
-                                <td>{{ producto['precio'] }}</td>
+                                <td>{{ producto['precio'] | currency: 'USD'}}</td>
                                 <td>
-                                    <i class="fa-solid fa-pen-to-square text-primary"></i>
-                                    <i class="fa-solid fa-trash text-danger"></i>
+                                    <i [routerLink] = "['/editar-producto', producto._id]" class="fa-solid fa-pen-to-square text-primary"></i>
+                                    <i (click) = "eliminarProducto(producto._id)"  class="fa-solid fa-trash text-danger"></i>
                                 </td>
                             </tr>
 
