--- a/mean 2/cliente/src/app/components/crear-producto/crear-producto.component.html
+++ b/mean 2/cliente/src/app/components/crear-producto/crear-producto.component.html
@@ -1,63 +1,115 @@
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <span class="titulo">
-                        {{titulo | uppercase}}
-                    </span>
-                    <form class="mt-3" [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
-                        <div class="mb-3">
-                            <input type="text" formControlName="producto" class="form-control form-control-lg"
-                                placeholder="Producto">
-                            <div class="text-danger"
-                                *ngIf="productoForm.get('producto')?.hasError('required') && productoForm.get('producto')?.touched">
-                                <span>El nombre del producto es obligatorio</span>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="text" formControlName="categoria" class="form-control form-control-lg"
-                                placeholder="Categoria">
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/home">
+      <i class="bi bi-database"></i>
+      Mi sistema
+    </a>
+  </div>
+</nav>
 
-                            <div class="text-danger"
-                                *ngIf="productoForm.get('categoria')?.hasError('required') && productoForm.get('categoria')?.touched">
-                                <span>El nombre de la categoria es obligatoria</span>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="text" formControlName="ubicacion" class="form-control form-control-lg"
-                                placeholder="Ubicación">
+<div class="container my-3">
+  <div class="row justify-content-center">
+    <div class="col-lg-10">
+      <div class="card text-bg-dark">
+        <div class="card-body text-center">
+          <span class="titulo">
+            {{titulo | uppercase}}
+          </span>
+          <form class="mt-1" [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
 
-                            <div class="text-danger"
-                                *ngIf="productoForm.get('ubicacion')?.hasError('required') && productoForm.get('ubicacion')?.touched">
-                                <span>El nombre de la ubicacion es obligatoria</span>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="number" formControlName="precio" class="form-control form-control-lg"
-                                placeholder="Precio">
-
-                            <div class="text-danger"
-                                *ngIf="productoForm.get('precio')?.hasError('required') && productoForm.get('precio')?.touched">
-                                <span>El nombre del precio es obligatorio</span>
-                            </div>
-                        </div>
-
-                        <div class="mb-3 m">
-                            <button routerLink="/" class="btn btn-danger btn-lg float-start">
-                                Volver
-                            </button>
-
-                            <button type="submit" [disabled]="productoForm.invalid"
-                                class="btn btn-success btn-lg float-end">
-                                Guardar
-                            </button>
-
-                        </div>
-                    </form>
-                </div>
+          <!-- Nombre de producto -->
+          <div class="row my-1 text-start">
+            <label for="colFormLabelLg" class="col-sm-12 col-form-label col-form-label-lg">Nombre</label>
+            <div class="col-sm-12">
+              <input type="text" formControlName="producto" class="form-control form-control-lg text-bg-dark"
+                                placeholder="Producto 1">
             </div>
+            <div class="col-12">
+              <div class="text-danger"
+                *ngIf="productoForm.get('producto')?.hasError('required') && productoForm.get('producto')?.touched">
+                <span>El nombre del producto es obligatorio</span>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Categoria del producto -->
+          <div class="row my-1 text-start">
+
+            <label for="colFormLabelLg" class="col-sm-12 col-form-label col-form-label-lg">Categoria</label>
+            <div class="col-sm-12">
+              <select formControlName="categoria" class="form-select form-select-lg text-bg-dark" aria-label="Sin elección"
+              placeholder="Categoria">
+              <option value="Categoria 1">Categoria 1</option>
+              <option value="Categoria 2">Categoria 2</option>
+              <option value="Categoria 3">Categoria 3</option>
+              <option value="Categoria 4">Categoria 4</option>
+            </select>
+            </div>
+
+            <div class="col-12">
+              <div class="text-danger"
+                *ngIf="productoForm.get('categoria')?.hasError('required') && productoForm.get('categoria')?.touched">
+                <span>La categoria es obligatoria</span>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row my-1 text-start">
+            <label for="colFormLabelLg" class="col-sm-12 col-form-label col-form-label-lg">Ubicación</label>
+            <div class="col-sm-12">
+              <select formControlName="ubicacion" class="form-select form-select-lg text-bg-dark" aria-label="Sin elección"
+                placeholder="Ubicacion">
+                <option value="Almacen 1 (Norte)">Almacen 1 (Norte)</option>
+                <option value="Almacen 2 (Este)">Almacen 2 (Este)</option>
+                <option value="Almacen 3 (Oeste)">Almacen 3 (Oeste)</option>
+                <option value="Almacen 4 (Sur)">Almacen 4 (Sur)</option>
+              </select>
+            </div>
+            <div class="col-12">
+              <div class="text-danger"
+              *ngIf="productoForm.get('ubicacion')?.hasError('required') && productoForm.get('ubicacion')?.touched">
+              <span>La ubicacion es obligatoria</span>
+            </div>
+            </div>
+
+          </div>
+          <div class="row my-1 text-start">
+            <label for="colFormLabelLg" class="col-sm-12 col-form-label col-form-label-lg">Precio</label>
+            <div class="col-sm-12">
+              <input type="number" formControlName="precio" class="form-control form-control-lg text-bg-dark" placeholder="Precio">
+            </div>
+            <div class="col-12">
+              <div class="text-danger"
+              *ngIf="productoForm.get('precio')?.hasError('required') && productoForm.get('precio')?.touched">
+              <span>El precio es obligatorio</span>
+            </div>
+            </div>
+
+          </div>
+
+          <div class="row my-4">
+            <div class="col-6 align-items-start">
+              <button routerLink="/" class="btn btn-danger btn-lg float-start">
+                <i class="bi bi-arrow-return-left mx-2"></i>Volver
+              </button>
+            </div>
+
+            <div class="col-6 align-items-end">
+              <button type="submit" [disabled]="productoForm.invalid" class="btn btn-success btn-lg float-end">
+                <i class="bi bi-save mx-2"></i>
+                Guardar
+              </button>
+            </div>
+
+
+
+          </div>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 
 </div>
