--- a/mean 2/cliente/src/app/components/home/home.component.html
+++ b/mean 2/cliente/src/app/components/home/home.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="../../../assets/imgs/literalMe.jpg" alt="Bootstrap" width="30" height="24">
+    <a class="navbar-brand" routerLink="/home">
+      <i class="bi bi-database"></i>
       Mi sistema
     </a>
   </div>
 </nav>
 
-<div class="container">
+<div class="container mb-4">
 
-  <div class="row my-4">
-    <div class="col-12">
+  <div class="row my-4 text-center align-items-center justify-content-center" >
+    <div class="col-8">
       <div class="card text-bg-dark" >
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="h4">Administra tus productos de manera fácil y rápida</p>
         </div>
       </div>
     </div>
@@ -24,28 +24,42 @@
     <div class="col-12">
       <div class="card text-bg-dark text-center">
         <div class="card-header">
-          Featured
+          <p class="h2">¿Como funciona?</p>
         </div>
         <div class="card-body">
 
           <div class="row text-center align-items-center justify-content-center">
-              <img src="../../../assets/imgs/literalMe.jpg" class="card-img-top" style="max-width: 250px!important; border-radius: 25px!important;" alt="perrito">
-              <img src="../../../assets/imgs/literalMe.jpg" class="card-img-top" style="max-width: 250px!important; border-radius: 25px!important;" alt="perrito">
-              <img src="../../../assets/imgs/literalMe.jpg" class="card-img-top" style="max-width: 250px!important; border-radius: 25px!important;" alt="perrito">
+            <div class="col-4">
+              <img src="../../../assets/imgs/crear.png" class="card-img-top my-2" style="max-width: 300px!important; border-radius: 15px!important;" alt="perrito">
+              <p class="my-2 h3">Insertar</p>
+            </div>
+
+            <div class="col-4">
+              <img src="../../../assets/imgs/Modificar.PNG" class="card-img-top my-2" style="max-width: 300px!important; border-radius: 15px!important;" alt="perrito">
+              <p class="my-2 h3">Modificar</p>
+            </div>
+
+            <div class="col-4">
+              <img src="../../../assets/imgs/Eliminar.PNG" class="card-img-top my-2" style="max-width: 300px!important; border-radius: 15px!important;" alt="perrito">
+              <p class="my-2 h3">Eliminar</p>
+            </div>
 
           </div>
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a routerLink="/" class="btn btn-light">Go somewhere</a>
+
+          <div class="row justify-content-center mt-4">
+            <div class="col-10">
+              <h5 class="card-title">¡Administra tus productos!</h5>
+              <p class="card-text">El sistema es un gestor de productos de cualquier tipo, puede ser escalable a incorporar mas elementos o incluso campos a las características actuales del producto.</p>
+              <a routerLink="/" class="btn btn-light h5"><i class="bi bi-arrow-right-circle mx-2" style="width: 3rem; height: 3rem;"></i> Acceder</a>
+            </div>
+          </div>
+
         </div>
         <div class="card-footer text-muted">
-          2 days ago
+
         </div>
       </div>
     </div>
   </div>
-
-
-
 
 </div>
